<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopRatedMovieDetailActivity"
    android:background="@color/letterbox_gray">

    <ImageView
        android:id="@+id/backdropImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/moviePosterText"
        android:transitionName="posterRoll"
        app:layout_constraintBottom_toTopOf="@+id/movieTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:shadowColor="@color/light_teal"
        android:shadowDx="3"
        android:shadowRadius="2"
        android:text="@string/testMovieTitleText"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        android:textColor="@color/movie_white"
        android:textStyle="bold"
        android:transitionName="title"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/movieOverview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backdropImage" />

    <TextView
        android:id="@+id/movieOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:padding="10sp"
        android:text="@string/loremIpsumText"
        android:textColor="@color/movie_white"
        app:layout_constraintBottom_toTopOf="@+id/releaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/dateTestString"
        android:textAlignment="center"
        android:textColor="@color/movie_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/voteAverage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieOverview" />

    <TextView
        android:id="@+id/popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/popTestString"
        android:textAlignment="center"
        android:textColor="@color/movie_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/voteCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voteAverage" />

    <TextView
        android:id="@+id/voteCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="163dp"
        android:fontFamily="sans-serif"
        android:text="@string/voteTestString"
        android:textAlignment="center"
        android:textColor="@color/movie_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularity" />

    <TextView
        android:id="@+id/voteAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/voteText"
        android:textAlignment="center"
        android:textColor="@color/movie_white"
        android:textStyle="bold"
        android:transitionName="vote"
        app:layout_constraintBottom_toTopOf="@+id/popularity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

</androidx.constraintlayout.widget.ConstraintLayout>