<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/moviePosterText"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/light_teal"
        android:shadowDx="3"
        android:shadowRadius="2"
        android:text="@string/testMovieTitleText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/movie_white"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/movie_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:text="@string/loremIpsumText"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/movie_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_image"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

</androidx.constraintlayout.widget.ConstraintLayout>